Listo cap2 y cap3

--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -443,7 +443,7 @@ Desde el punto de vista de la evaluación hay dos tipos de trabajos:
 
 \subsubsection{Autoevaluación o evaluación entre iguales.}
 
-La autoevaluación es un proceso en el que los estudiantes evalúan su propio trabajo, mientras que  en el proceso de evaluación entre iguales un estudiante evalúa el trabajo de otro u otros estudiantes. Esta práctica se emplea por un lado para mejorar tanto el conocimiento en la materia del alumnado como sus habilidades metacognitivas, y por otro, para ahorrar tiempo del profesorado. A menudo este tipo de evaluación se acompaña de algún tipo de rúbrica \cite{malehorn1994ten}.
+La autoevaluación es un proceso en el que los estudiantes evalúan su propio trabajo, mientras que  en el proceso de evaluación entre iguales un estudiante evalúa el trabajo de otro u otros estudiantes. Esta práctica se emplea por un lado para mejorar tanto el conocimiento en la materia del alumnado como sus habilidades metacognitivas, y por otro, para ahorrar tiempo del profesorado. A menudo este tipo de evaluación se acompaña de algún tipo de rúbrica~\cite{malehorn1994ten}.
 
 En algunos trabajos el proceso de evaluación de competencias genéricas se lleva a cabo después de haber trabajado los estudiantes en actividades de un VLE mediante cuestionarios que completan los propios estudiantes o el profesor. Los profesores confirman que el uso de herramientas web mejora la participación en la comunidad favoreciendo la colaboración y la construcción de conocimiento compartido~\cite{starcic2008sustaining}. Las herramientas que suelen utilizarse son wikis, foros, actividades y e-portfolio. Esta última aparece en varios trabajos, un e-portfolio (del inglés \emph{electronic portfolio}), consiste en un conjunto de documentos, generalmente textos, archivos e imágenes, gestionados en un entorno web por un usuario. Los estudiantes trabajan con esta herramienta durante el curso y al final autoevalúan el desempeño de alguna competencia genérica\cite{arno2011promoting}.
 
@@ -872,7 +872,7 @@ En base al estudio mostrado las respuestas a las preguntas de investigación son
 
 En esta selección de trabajos se han encontrado evaluaciones para todas las competencias que fueron definidas en la tabla~\ref{tab:CompetenciasGenericas}. Aunque las que más se han evaluado son la \emph{comunicación} (14 trabajos), \emph{trabajo en equipo} (13 trabajos) y \emph{resolución de problemas} (7 trabajos). El resumen completo de número de trabajos por competencia puede verse en la tabla~\ref{tab:TrabajosCompetencia}.
 
-Estos datos se pueden contrastar con los de la revisión de la literatura mostrada en \cite{strijbos2015criteria}, donde se analizan las competencias genéricas más frecuentemente evaluadas. En este caso repite posición la competencia de la \emph{comunicación}. La competencia de \emph{resolución de problemas} ocupa la cuarta posición, mientras que la de \emph{trabajo en equipo} pasa a sexto lugar. En este caso se hallaron más artículos para todas las competencias, ya que no se descartaron por no ser procesos soportados tecnológicamente. 
+Estos datos se pueden contrastar con los de la revisión de la literatura mostrada en \cite{strijbos2015criteria}, donde se analizan las competencias genéricas más frecuentemente evaluadas. En este caso repite posición la competencia de la \emph{comunicación}. La competencia de \emph{resolución de problemas} ocupa la cuarta posición, mientras que la de \emph{trabajo en equipo} pasa a sexto lugar. En este caso se hallaron más artículos para todas las competencias, ya que no se descartaron por no ser procesos soportados tecnológicamente. El hecho de que haya más trabajos en proporción para la competencia de\emph{trabajo en equipo} en nuestra selección de trabajos se puede deber a que los VLE favorecen los procesos de cooperación~\cite{i2007competencias}.
 
 % , siendo la competencia de \emph{procesamiento de la información} es la que ocupa la segunda plaza
 
