--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1004,6 +1004,15 @@ author = "Leslie Borjas De Xena"
   publisher={Taylor \& Francis}
 }
 
+@article{i2007competencias,
+  title={{Competencias TIC y trabajo en equipo en entornos virtuales}},
+  author={i Catas{\'u}s, Montse Guitert and Romeu, Teresa and P{\'e}rez-Mateo, Mar{\'\i}a},
+  journal={RUSC. Universities and Knowledge Society Journal},
+  volume={4},
+  number={1},
+  year={2007}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
