--- a/dissertation.tex
+++ b/dissertation.tex
@@ -190,20 +190,24 @@
 % introduction
 \include{2_state_of_the_art/0_index}	
 
+%: ----------------------- problemas encontrados ------------------------
+% introduction
+\include{3_problemas/0_index}
+
 %: ----------------------- overall methodology ------------------------
 % introduction
-\include{3_overall_methodology/0_index}
+\include{4_overall_methodology/0_index}
 	
 %: ----------------------- experiments and results ------------------------
 % introduction
-\include{4_experiments_and_results/0_index}	
-\include{4_experiments_and_results/1_wikis}	
-\include{4_experiments_and_results/2_cursos}	
-\include{4_experiments_and_results/3_vw}	
+\include{5_experiments_and_results/0_index}	
+\include{5_experiments_and_results/1_wikis}	
+\include{5_experiments_and_results/2_cursos}	
+\include{5_experiments_and_results/3_vw}	
 	
 %: ----------------------- conclusion ------------------------
 % introduction
-\include{5_conclusion/0_index}	
+\include{6_conclusion/0_index}	
 	
 
 % --------------------------------------------------------------
