--- a/4_overall_methodology/0_index.tex
+++ b/4_overall_methodology/0_index.tex
@@ -9,7 +9,7 @@ Historical methodology, as I see it, is a product of common sense applied to cir
 \end{savequote}
 
 
-\chapter{Metodología para la evaluación de competencias genéricas}
+\chapter{Método para la evaluación de competencias genéricas}
 \label{cha:Overall methodology}
 
 % the code below specifies where the figures are stored
@@ -22,37 +22,161 @@ Historical methodology, as I see it, is a product of common sense applied to cir
 
 %------------------------------------------------------------------------- 
 
-\cite{turing1950computing}
+En este capítulo se propone un método para la evaluación de competencias genéricas a partir de indicadores obtenidos del registro de interacciones de los estudiantes con el VLE. El capítulo comienza con una introducción a las bases de la propuesta y una descripción de las características más relevantes del \emph{learning analytics}. Finalmente se describirá la metología propuesta, las técnicas con las que se aplican y las implementaciones que se han realizado.
 
-Este capítulo presenta la metodología propuesta para la evaluación de competencias genéricas.
+\section{Introducción}
 
-\section{Como voy a evaluar}
+La manera en que los profesores realizan las evaluaciones de sus asignaturas ha evolucionado a lo largo de los años igual que lo ha hecho la manera en la que los estudiantes realizan sus trabajos. De los trabajos realizados por los estudiantes con bolígrafo y papel se pasó a los realizados en ordenador con un procesador de textos y su correspondiente envío en formato PDF por correo electrónico, y de estos últimos se pasó subir o completar ejercicios en un VLE. Y mientras los primeros se corregían con bolígrafo de color rojo y los segundos mirando el monitor del ordenador, hemos llegado a un punto donde según el tipo de trabajo, la herramie la evaluación puede ser de un tipo u otro, pero casi siempre soportada por la tecnología y cada vez más automatizada.
 
-Metolodogía mixta
+En el capítulo \ref{cha:State of the Art} se ha llevado a cabo una revisión de la literatura para conocer cómo se ha utilizado la tecnología para evaluar las competencias genéricas, mientras que en el capítulo \ref{cha:Problemas} se han resumido los principales inconvenientes de las estrategias encontradas. A partir de estos inconvenientes se detallarán a continuación las características con que deberá contar el método que aquí se propone.
 
-Cómo voy a evaluar roles, momentos, actividad, ... lo que sea.
+\paragraph*{Indicadores objetivos}
 
-Explicar el DSL
+El primero de los incovenientes que encontramos es la \emph{subjetividad}. Cuando los estudiantes están inmersos en un proceso de evaluación basado en la autoevaluación o evaluación entre iguales en ocasiones las calificaciones que estos otorgan a sus compañeros en algunas competencias genéricas difieren de la que en realidad merecen (o la que el profesor consideraría que merecen). Bien sea por su falta de criterio, su mala interpretación de la rúbrica o la falta de madurez. También podría darse el caso de que entre los cientos de trabajos que un profesor tenga que corregir, éste ponga diferentes calificaciones a estudiantes que en realidad merecen la misma calificación. El profesor es un ser humano, sujeto a cientos de interacciones sociales, estados emocionales y situaciones que pueden alterar su juicio a la hora de poner la calificación al estudiante. No es algo destacado en la literatura, pero que sí podría ocurrir y más aún si pensamos en competencias genéricas. Por tanto, el método para evaluar competencias genéricas debe ofrecer un criterio objetivo, que otorgue la misma calificación a los estudiantes que se hayan comportado de la misma manera o que ofrezcan los mismos resultados.
 
-DSL: herramienta de investigación en evaluaciones. Esta herramienta ayuda al investigador a formalizar la evaluación.
+\paragraph*{Evaluación escalable}
+
+El segundo de los inconvenientes encontramos es la \emph{escalabilidad}. El método para la evaluación de competencias genéricas debe ser escalable, y no puede suponer al profesor un esfuerzo que éste no pueda abordar. Por eso, en la medida de lo posible el método deberá alienarse con las herramientas y tareas que el profesor plantea a los estudiantes, generalmente todas ellas relacionadas con el VLE que da soporte a las asignaturas.
+
+\paragraph*{Propósito general}
+
+En la revisión de la literatura se encontraron herramientas que era útiles para própositos concretos. Esto normalmente ocurre con los juegos serios, que estaban enfocados para desarrollar y evaluar competencias específicas de los estudiantes. El método para evaluar competencias genéricas debe ser válidos y utilizable por cualquier profesor, sin importar la materia que imparta o las competencias que quiera evaluar. 
+
+\paragraph*{Coste asumible}
+
+El desarrollo de programas informáticos como los juegos serios o el desarrollo de tests psicológicos no está al alcance de todos los profesores. Cada profesor posee unos medios que deben ser suficientes para la evaluación de competencia genéricas, por lo que nuestro método deberá valerse de esos medios para obtener los indicadores el profesor requiera para evaluar competencias genéricas.
+
+\paragraph*{Diseño de evaluaciones}
+
+Por último nos encontramos con que aunque hay trabajos que obtienen sus evaluaciones a partir de los indicadores del VLE, éstos son fijos. Es decir, cada competencia se evalúa con un indicador dado. Pero puede ocurrir que el profesor no utilice las actividades del VLE que proporcionen dichos indicadores o que utilice las actividades con un enfoque diferente. También podría ocurrir que quisiera combinar el resultado de un indicador con otro para obtener lo que él considerará un indicador válido de la competencia. Por todo esto, el método que aquí se presenta deberá proporcionar al profesor la posibilidad de diseñar sus propias evaluaciones a partir de los indicadores.
+
+
+\section{Learning analytics}
+
+Este término ya apareció en capítulos anteriores, pero es necesario volver a traerlo y hablar más en profundidad sobre él ya que es la base del método presentado en estre trabajo. El \emph{learning analytics} es la medición, recopilación, análisis y presentación de datos sobre los estudiantes, sus contextos y las interacciones que allí se generan, con el fin de comprender el proceso de aprendizaje que se está desarrollando y optimizar los entornos en los que se produce~\cite{siemens2012learning}.
+
+
+
+\section{Método propuesto para la evaluación de competencias genéricas}
+
+bla bla bla
+
+\subsection{Introducción}
+
+bla bla bla
+
+\subsection{Descripción}
+
+bla bla bla
+
+\subsection{Implementaciones}
+
+bla bla bla
+
+%------------------------------------------------
+\subsubsection{AssessMediaWiki}
+
+bla bla bla
+
+\paragraph*{Descripción}
+
+bla bla bla
+
+\paragraph*{Tecnología implementada}
+
+bla bla bla
+
+\paragraph*{Indicadores que aporta}
+
+bla bla bla
+
+\paragraph*{Ejemplo de uso}
+
+bla bla bla
+
+\paragraph*{Publicación}
+
+bla bla bla
+% La evaluación de las 3 herramientas se corresponde al capítulo siguiente.
+
+%------------------------------------------------
+\subsubsection{EvalCourse}
+
+bla bla bla
+
+\paragraph*{Descripción}
+
+bla bla bla
+
+\paragraph*{Tecnología implementada}
+
+bla bla bla
+
+\paragraph*{Indicadores que aporta}
+
+bla bla bla
+
+\paragraph*{Ejemplo de uso}
+
+bla bla bla
+
+\paragraph*{Publicación}
+
+bla bla bla
+% La evaluación de las 3 herramientas se corresponde al capítulo siguiente.
+
+%------------------------------------------------
+\subsubsection{EvalSim}
+
+bla bla bla
+
+\paragraph*{Descripción}
+
+bla bla bla
+
+\paragraph*{Tecnología implementada}
+
+bla bla bla
+
+\paragraph*{Indicadores que aporta}
+
+bla bla bla
+
+\paragraph*{Ejemplo de uso}
+
+bla bla bla
+
+\paragraph*{Publicación}
+
+bla bla bla
+% La evaluación de las 3 herramientas se corresponde al capítulo siguiente.
+
+
+%Metolodogía mixta
+
+%Cómo voy a evaluar roles, momentos, actividad, ... lo que sea.
+
+%Explicar el DSL
+
+%DSL: herramienta de investigación en evaluaciones. Esta herramienta ayuda al investigador a formalizar la evaluación.
  
-Enfocar la metodología a que no es una metodología para evaluar, sino para diseñar evaluaciones. Diseñador de evaluaciones.
+%Enfocar la metodología a que no es una metodología para evaluar, sino para diseñar evaluaciones. Diseñador de evaluaciones.
 
-Explicar qué pasos tiene que seguir un diseñador de evaluaciones para hacer sus evaluaciones.
+%Explicar qué pasos tiene que seguir un diseñador de evaluaciones para hacer sus evaluaciones.
 
-Dentro de los resultados obtenemos dos cosas:
-1. Diseño
-2. Lo que el diseñador nos indicó que no pudo hacer
+%Dentro de los resultados obtenemos dos cosas:
+%1. Diseño
+%2. Lo que el diseñador nos indicó que no pudo hacer
 
-Para que esto sea posible falta la herramienta informática
+%Para que esto sea posible falta la herramienta informática
 
-\section{Evolución herramientas}
+%\section{Evolución herramientas}
 
-AMW --> EvalCourse --> EvalSim
+%AMW --> EvalCourse --> EvalSim
 
-\section{Metodologia de desarrollo}
+%\section{Metodologia de desarrollo}
 
-DSL? Ing. Dirigida x modelo?
+%DSL? Ing. Dirigida x modelo?
 
 
 
