--- a/4_overall_methodology/0_index.tex
+++ b/4_overall_methodology/0_index.tex
@@ -59,7 +59,7 @@ Este término ya apareció en capítulos anteriores, pero es necesario volver a 
 
 \section{Método propuesto para la evaluación de competencias genéricas}
 
-bla bla bla
+En esta sección se presenta el método que propone esta tesis para la evaluación de competencias genéricas. La sección consta de tres partes: una primera parte en la que habrá una breve introducción; una segunda parte en la que se describirá en detalle el modelo y una tercera en la que se presentaran las tres herramientas implementadas para poner en práctica el método.
 
 \subsection{Introducción}
 
@@ -74,13 +74,17 @@ bla bla bla
 bla bla bla
 
 %------------------------------------------------
-\subsubsection{AssessMediaWiki}
+\subsubsection{Wikis: AssessMediaWiki}
 
-bla bla bla
+Los wikis son un sistema muy utilizado en la docencia. Para evaluar el trabajo final de un grupo de estudiantes en una página del wiki nos bastaría con leer la última versión de dicha página. Sin embargo, los wikis mantienen un registro con las diferencias entre las ediciones consecutivas de los artículos, que pueden ser usadas para la evaluación de diferentes competencias genéricas relacionadas con el trabajo en equipo.
+
+Si el número de estudiantes es elevado, la cantidad de información almacenada en un wiki aumenta de manera considerable. En ese caso, evaluar el trabajo de cada estudiante a partir de las distintas versiones de cada página del wiki resulta poco escalable. Para poder abarcarla se creó \emph{AssessMediaWiki}, una aplicación web que proporciona procedimientos de autoevaluación, evaluación entre iguales y evaluación del profesor a partir de una rúbrica para evaluar a los estudiantes.
 
 \paragraph*{Descripción}
 
-bla bla bla
+AssessMediaWiki es una aplicación web de código abierto que, al conectarse a una instalación MediaWiki, proporciona procedimientos de autoevaluación, evaluación entre iguales y evaluación del profesor, a la vez que mantiene información sobre esas evaluaciones. Los supervisores pueden obtener informes que ayudan en la evaluación de los estudiantes.
+
+AssessMediaWiki implementa dos roles de usuario distintos: supervisores y estudiantes. Los estudiantes pueden elegir entre distintas opciones: evaluar una revisión, comprobar sus propias aportaciones evaluadas y verificar las evaluaciones ya enviadas. Por otro lado, los supervisores tienen un mayor número de opciones, como definir la rubrica que los estudiantes deberán completar al realizar sus evaluaciones, modificar los parámetros de los programas o vigilar las evaluaciones que los alumnos vayan haciendo.
 
 \paragraph*{Tecnología implementada}
 
