--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1013,6 +1013,41 @@ author = "Leslie Borjas De Xena"
   year={2007}
 }
 
+@article{chatti2014learning,
+  title={Learning Analytics: Challenges and Future Research Directions},
+  author={Chatti, Mohamed Amine and Lukarov, Vlatko and Th{\"u}s, Hendrik and Muslim, Arham and Yousef, Ahmed Mohamed Fahmy and Wahid, Usman and Greven, Christoph and Chakrabarti, Arnab and Schroeder, Ulrik},
+  year={2014}
+}
+
+@article{elgort2008wiki,
+  title={Is wiki an effective platform for group course work?},
+  author={Elgort, Irina and Smith, Alastair G and Toland, Janet},
+  journal={Australasian Journal of Educational Technology},
+  volume={24},
+  number={2},
+  year={2008}
+}
+
+@article{trentin2009using,
+  title={Using a wiki to evaluate individual contribution to a collaborative learning project},
+  author={Trentin, Guglielmo},
+  journal={Journal of Computer Assisted Learning},
+  volume={25},
+  number={1},
+  pages={43--55},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{ortega2011new,
+  title={New educational approach based on the use of wiki platforms in university environments},
+  author={Ortega Valiente, J and Reinoso Peinado, JA},
+  booktitle={Next Generation Web Services Practices (NWeSP), 2011 7th International Conference on},
+  pages={280--284},
+  year={2011},
+  organization={IEEE}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
