--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1048,6 +1048,98 @@ author = "Leslie Borjas De Xena"
   organization={IEEE}
 }
 
+@inproceedings{Balderas:2012,
+    author = {Antonio Balderas and Manuel Palomo-Duarte and Juan Manuel Dodero and Iván Ruiz Rube},
+    title = {Qualitative assessment of wiki-based learning processes},
+    booktitle = {Proceedings of SPDECE-2012. Ninth multidisciplinary symposium on the design 
+                 and evaluation of digital content for education},
+    pages     = {161-172},
+    year = {2012},
+}
+
+@article{berns2013game,
+  title={Game-like language learning in 3-D virtual environments},
+  author={Berns, Anke and Gonzalez-Pardo, Antonio and Camacho, David},
+  journal={Computers \& Education},
+  volume={60},
+  number={1},
+  pages={210--220},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{hew2010use,
+  title={Use of three-dimensional (3-D) immersive virtual worlds in K-12 and higher education settings: A review of the research},
+  author={Hew, Khe Foon and Cheung, Wing Sum},
+  journal={British journal of educational technology},
+  volume={41},
+  number={1},
+  pages={33--55},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+@article{cruz2015discovering,
+  title={Discovering usage behaviors and engagement in an Educational Virtual World},
+  author={Cruz-Benito, Juan and Ther{\'o}n, Roberto and Garc{\'\i}a-Pe{\~n}alvo, Francisco J and Lucas, Emiliana Pizarro},
+  journal={Computers in Human Behavior},
+  volume={47},
+  pages={18--25},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@inproceedings{moreno2014serious,
+  title={Serious games: A journey from research to application},
+  author={Moreno-Ger, Pablo and Martinez-Ortiz, Ivan and Freire, Manuel and Manero, Borja and Fernandez-Manjon, Baltasar},
+  booktitle={Frontiers in Education Conference (FIE), 2014 IEEE},
+  pages={1--4},
+  year={2014},
+  organization={IEEE}
+}
+
+@article{palomo2014assessment,
+  title={Assessment of collaborative learning experiences by graphical analysis of wiki contributions},
+  author={Palomo-Duarte, Manuel and Dodero, Juan Manuel and Medina-Bulo, Inmaculada and Rodr{\'\i}guez-Posada, Emilio J and Ruiz-Rube, Iv{\'a}n},
+  journal={Interactive Learning Environments},
+  volume={22},
+  number={4},
+  pages={444--466},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{eysholdt2010xtext,
+  title={Xtext: implement your language faster than the quick and dirty way},
+  author={Eysholdt, Moritz and Behrens, Heiko},
+  booktitle={Proceedings of the ACM international conference companion on Object oriented programming systems languages and applications companion},
+  pages={307--309},
+  year={2010},
+  organization={ACM}
+}
+
+@article{schmidt2006guest,
+  title={Guest editor's introduction: Model-driven engineering},
+  author={Schmidt, Douglas C},
+  journal={Computer},
+  volume={39},
+  number={2},
+  pages={0025--31},
+  year={2006},
+  publisher={IEEE Computer Society}
+}
+
+@article{garrison1999critical,
+  title={Critical inquiry in a text-based environment: Computer conferencing in higher education},
+  author={Garrison, D Randy and Anderson, Terry and Archer, Walter},
+  journal={The internet and higher education},
+  volume={2},
+  number={2},
+  pages={87--105},
+  year={1999},
+  publisher={Elsevier}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
