--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -330,7 +330,7 @@ En la tabla~\ref{tab:CompetenciasGenericas} se muestran las competencias genéri
 \pagestyle{fancy}
 
 \subsubsection{Métodos}
-
+\label{sec:methods}
 En cada uno de los trabajos seleccionados se llevaba a cabo un método de evaluación. A partir de la descripción que realizaban los autores sobre el proceso de evaluación realizado, cada trabajo ha sido clasificado dentro de alguno de los métodos que a continuación se detallan:
 
 \begin{itemize}
@@ -345,6 +345,7 @@ En cada uno de los trabajos seleccionados se llevaba a cabo un método de evalua
 \end{itemize}
 
 \subsubsection{Técnicas}
+\label{sec:techniques}
 
 En cada uno de los trabajos seleccionados se utilizó alguna técnica para llevar a cabo alguno de los métodos de evaluación anteriormente descritos. A continuación se describen el conjunto de técnicas que aparecen en estos trabajos:
 
