--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1140,6 +1140,16 @@ author = "Leslie Borjas De Xena"
   publisher={Elsevier}
 }
 
+@article{park2015development,
+  title={Development of the Learning Analytics Dashboard to Support Students' Learning Performance},
+  author={Park, Yeonjeong and Jo, Il-Hyun},
+  journal={Journal of Universal Computer Science},
+  volume={21},
+  number={1},
+  pages={110--133},
+  year={2015}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
